--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     <h1>RUN BUDDY</h1>
-    <h2>RUN BUDDY</h2>
-    What We Do
-    🏃
-</body>
+    What We Do What You Do Your Trainers Reach Out
+  </body>
 </html>
