--- a/index.html
+++ b/index.html
@@ -5,12 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Buddy</title>
+<link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body>
     <!--navigatioin-->
     <header>
-    <h1>RUN BUDDY</h1>
+    <h1>
+        <a href="?">RUN BUDDY</a>
+    </h1>
+    <nav>
+        <!--Unorder list eliment-->
+        <ul>
+            <!--list item element-->
+            <li>
+                <!--Anchor eliment-->
+                <a href="#what-we-do">What We Do</a>
+            </li>
+            <li>
+                <a href="#your-trainers">Your Trainers</a>
+            </li>
+            <li>
+                <a href="#reach-out">Reach Out</a>
+            </li>
+        </ul>
+    </nav>
     </header>
+<!--hero section-->
+    <section class="hero">
+        <div class="hero-form">
+            <h3>Get Started Today</h3>
+            <p> Fill out this form and one of our trainers will schedule a consult</p>
+            <!--Add for element-->
+            <form>
+                <label for ="name">Enter full name:</label>
+                <input type="text" placeholder="Your Name" name="name" id="name" />
+                <lable for= "email">Enter email address</lable>
+                <input type="email" placeholder="Email Address" name="email" id="email" />
+                <label for="phone">Enter a telephone number:</label>
+                <input type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+                <p>
+                    Have you worked out with a trainer before?
+                    <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                    <lable for="trainer-yes">Yes</lable>
+                    <input type="radio" name="trainer-confirm" id="trainer-no" />
+                    <lable for="trainer-no">No</lable>
+                </p>
+                <p>
+                    <lable for="checkbox">
+                        I acknoledge that I am at least 18 years of age.
+                    </lable>
+                    <input type="checkbox" name="age-confirm" id="checkbox" />
+                </p>
+            </form>
+        </div>
+    </section>
+    <!--end hero-->
   <!--hero/jumbotron-->
   <section>
 
@@ -34,6 +83,11 @@
   <!--footer-->
   <footer>
       <h2>❤️ Made with love by Run Buddy.</h2>
+      <div>
+        <a href="#">Read Our Privacy Policy</a> <br />
+        &copy; 2019 Run Buddy, Inc.
+    </div>
   </footer>
+ 
   </body>
 </html>
