meet the trainers section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
     <!--end hero-->
   <!--hero/jumbotron-->
-  <section>
+  
 
   </section>
   <!--"what we do" section-->
@@ -102,8 +102,39 @@
       </div>
   </section>
   <!--"meet the trainer" section-->
-  <section id="meet-the-trainers">
-      <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers">
+      <h2 class="section-title primary-border"> Meet The Trainers</h2>
+      
+      <article class="trainer">
+          <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+          <div class="trainer-bio text-left">
+              <h3>Arron Stephens</h3>
+              <h4>Speed / Strength</h4>
+              <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas distinctio nihil ducimus minus sed? Alias, unde ipsam culpa doloremque, autem hic soluta est, fuga nesciunt voluptates ullam sint aperiam officia?
+              </p>
+          </div>
+      </article>
+      <!--second trainer bio-->
+      <article class="trainer">
+          <div class="trainer-bio text-right">
+              <h3>Joanna Gill</h3>
+              <h4>Endurance</h4>
+              <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere sequi numquam error tenetur possimus porro blanditiis itaque, saepe odio at molestias in vel dolore. Modi totam in similique error expedita?
+              </p>
+          </div>
+          <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill colling off after a workout"  />
+        </article>
+        <!--third trainer bio-->
+        <article class="trainer">
+            <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weight" />
+            <div class="trainer-bio text-left">
+                <h3>Harry "the Headband Smith"</h3>
+                <h4>Strength</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quasi ducimus ex a, ipsam amet hic. Explicabo modi consectetur ullam tempora ipsum deserunt rem impedit? Fugiat ex vel eos debitis.</p>
+            </div>
+        </article>
   </section>
   <!--"reach out" section-->
   <section id="reach-out">
