--- a/index.html
+++ b/index.html
@@ -139,6 +139,24 @@
   <!--"reach out" section-->
   <section id="reach-out">
       <h2>Reach Out</h2>
+      <div class="contact-info">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3030.1956204707126!2d-111.8704989492512!3d40.58143725342876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287e2fc615ac9%3A0x23b7e3cb547c5cb3!2sDeseret%20Industries%20Thrift%20Store!5e0!3m2!1sen!2sus!4v1642664859592!5m2!1sen!2sus" 
+          width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+          </iframe>
+      </div>
+      <div>
+          <h3>Run Buddy</h3>
+          <P>Any questions or concerns before signing up?
+              <br/>
+          Let us know and we'll be happy to talk to you!</P>
+          <address>
+            Plaza 9400 Shopping Center, 825 E 9400 S<br/>
+            Sandy, UT <br/>
+            84094<br/>
+            P: 555.RUN.BUDZ (555.786.2839)<br/>
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          </address>
+      </div>
   </section>
   <!--footer-->
   <footer>
