--- a/index.html
+++ b/index.html
@@ -130,20 +130,20 @@
         <article class="trainer">
             <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weight" />
             <div class="trainer-bio text-left">
-                <h3>Harry "the Headband Smith"</h3>
+                <h3>Harry "the Headband" Smith</h3>
                 <h4>Strength</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quasi ducimus ex a, ipsam amet hic. Explicabo modi consectetur ullam tempora ipsum deserunt rem impedit? Fugiat ex vel eos debitis.</p>
             </div>
         </article>
   </section>
   <!--"reach out" section-->
-  <section id="reach-out">
-      <h2>Reach Out</h2>
+  <section id="reach-out" class="contact">
+      <h2 class="section-title secondary-border">Reach Out</h2>
       <div class="contact-info">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3030.1956204707126!2d-111.8704989492512!3d40.58143725342876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287e2fc615ac9%3A0x23b7e3cb547c5cb3!2sDeseret%20Industries%20Thrift%20Store!5e0!3m2!1sen!2sus!4v1642664859592!5m2!1sen!2sus" 
           width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
           </iframe>
-      </div>
+
       <div>
           <h3>Run Buddy</h3>
           <P>Any questions or concerns before signing up?
@@ -157,7 +157,9 @@
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </address>
       </div>
+    </div>
   </section>
+
   <!--footer-->
   <footer>
       <h2>❤️ Made with love by Run Buddy.</h2>
@@ -165,6 +167,7 @@
         <a href="#">Read Our Privacy Policy</a> <br />
         &copy; 2019 Run Buddy, Inc.
     </div>
+ 
   </footer>
  
   </body>
