add flexbox to the steps

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
   <section id="what-we-do" class="intro"> 
       <!-- Wrap every h2 with a class of "section-title" in this div! -->
       <div class="flex-row">
-      <h2 class="section-title primary-border">What We Do</h2>
+      <h2 class="section-title primary-border">
+          What We Do
+        </h2>
       </div>
     <div class="flex-row">
       <p>
@@ -86,7 +88,9 @@
   <!--what you do" section-->
   <section id="what-you-do" class="steps">
     <div class="flex-row">
-      <h2 class="section-title second-border">What You Do</h2>
+      <h2 class="section-title secondary-border">
+          What You Do
+        </h2>
     </div>
       <div class="step">
           <h3>Step 1.</h3>
@@ -96,7 +100,7 @@
               </div>
           <div class="step-text">
               <h4>Fill Out The Form Above</h4>
-              <p>You're already her, so why not?</p>
+              <p>You're already here, so why not?</p>
           </div>
         </div>
 
@@ -110,7 +114,7 @@
             </div>
           
         <div class="step-text">
-          <h4> Consult with One of Our Trainers.</h4>
+          <h4> Consult With One Of Our Trainers.</h4>
           <p> Are you here to build muscle, lose weight, or just feel good?</p>
         </div>
         </div>
@@ -133,12 +137,14 @@
       <div class="step">
         <h3>Step 4.</h3>
         <div class="step-info">
+
           <div class="step-img">
           <img src="./assets/images/step-4.svg" alt="" />
           </div>
+
           <div class="step-text">
           <h4> See Results</h4>
-          <p>Bi-weekly chekins with your trainer will keep you focused.</p>
+          <p>Bi-weekly checkins with your trainer will keep you focused.</p>
           </div>
         </div>
         </div>
