add flexbox to the footer

--- a/index.html
+++ b/index.html
@@ -192,25 +192,9 @@
   <!--"reach out" section-->
   <section id="reach-out" class="contact">
       <h2 class="section-title secondary-border">Reach Out</h2>
+
       <div class="contact-info">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3030.1956204707126!2d-111.8704989492512!3d40.58143725342876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287e2fc615ac9%3A0x23b7e3cb547c5cb3!2sDeseret%20Industries%20Thrift%20Store!5e0!3m2!1sen!2sus!4v1642664859592!5m2!1sen!2sus" 
-          width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
-          </iframe>
-
-          <div class="contact-form">
-              <h3>Contact Us</h3>
-              <form>
-                  <lable for="contact-name">Your Name</lable>
-                  <input type="text" id="contact-name" placeholder="Your Name" />
-
-                  <lable for="contact-message">Message</lable>
-                  <textarea id="contact-message" placeholder="Message"></textarea>
-
-                  <button type="submit">Submit</button>
-              </form>
-          </div>
-
-      <div>
+          <div>
           <h3>Run Buddy</h3>
           <P>Any questions or concerns before signing up?
               <br/>
@@ -223,7 +207,23 @@
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </address>
       </div>
+    
+    <div class="contact-form">
+        <h3>Contact Us</h3>
+        <form>
+            <label for="contact-name">Your Name</lable>
+            <input type="text" id="contact-name" placeholder="Your Name" />
+
+            <label for="contact-message">Message</lable>
+            <textarea id="contact-message" placeholder="Message"></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
     </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3030.1956204707126!2d-111.8704989492512!3d40.58143725342876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287e2fc615ac9%3A0x23b7e3cb547c5cb3!2sDeseret%20Industries%20Thrift%20Store!5e0!3m2!1sen!2sus!4v1642664859592!5m2!1sen!2sus" 
+    width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+    </iframe>
+</div>
   </section>
 
   <!--footer-->
@@ -233,7 +233,7 @@
         <a href="./privacy-policy.html">Read Our Privacy Policy</a> <br />
         &copy; 2019 Run Buddy, Inc.
     </div>
- 
+
   </footer>
  
   </body>
