--- a/index.html
+++ b/index.html
@@ -44,17 +44,21 @@
                 <label for="phone">Enter a telephone number:</label>
                 <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
                 <p>
-                    Have you worked out with a trainer before?
+                  Have you worked out with a trainer before?
+                  <span class="radio-wrapper">
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
-                    <lable for="trainer-yes">Yes</lable>
+                    <label for="trainer-yes">Yes</label>
+                  </span>
+                  <span class="radio-wrapper">
                     <input type="radio" name="trainer-confirm" id="trainer-no" />
-                    <lable for="trainer-no">No</lable>
+                    <label for="trainer-no">No</label>
+                  </span>
                 </p>
                 <p>
-                    <lable for="checkbox">
-                        I acknoledge that I am at least 18 years of age.
-                    </lable>
+                  <span class="checkbox-wrapper">
                     <input type="checkbox" name="age-confirm" id="checkbox" />
+                    <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+                  </span>
                 </p>
                 <button type="button">Get running!</button>
             </form>
